--- a/Iris (1).ipynb
+++ b/Iris (1).ipynb
@@ -1,25 +1,17 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "id": "WSVRNhupGi1m"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
+        "#added a comment\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -31,19 +23,11 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n"
-      ],
-      "metadata": {
-        "id": "WSVRNhupGi1m"
-      },
-      "execution_count": 35,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = sns.load_dataset('iris')\n",
-        "df.head()\n"
-      ],
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -52,19 +36,9 @@
         "id": "Kyu56PaSHl1N",
         "outputId": "8cb90fc9-0eb6-4d23-d511-0fd994cd2086"
       },
-      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   sepal_length  sepal_width  petal_length  petal_width species\n",
-              "0           5.1          3.5           1.4          0.2  setosa\n",
-              "1           4.9          3.0           1.4          0.2  setosa\n",
-              "2           4.7          3.2           1.3          0.2  setosa\n",
-              "3           4.6          3.1           1.5          0.2  setosa\n",
-              "4           5.0          3.6           1.4          0.2  setosa"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-9e2e4b09-07e7-4186-9b25-f064a37e7752\" class=\"colab-df-container\">\n",
@@ -345,140 +319,148 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "   sepal_length  sepal_width  petal_length  petal_width species\n",
+              "0           5.1          3.5           1.4          0.2  setosa\n",
+              "1           4.9          3.0           1.4          0.2  setosa\n",
+              "2           4.7          3.2           1.3          0.2  setosa\n",
+              "3           4.6          3.1           1.5          0.2  setosa\n",
+              "4           5.0          3.6           1.4          0.2  setosa"
             ]
           },
+          "execution_count": 36,
           "metadata": {},
-          "execution_count": 36
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = sns.load_dataset('iris')\n",
+        "df.head()\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "p4zOg0nJHok2"
+      },
+      "outputs": [],
       "source": [
         "# Here i convert  the target feature into Numerical feature using LabelEncoder\n",
         "le = LabelEncoder()\n",
         "df['species'] = le.fit_transform(df['species'])\n"
-      ],
-      "metadata": {
-        "id": "p4zOg0nJHok2"
-      },
-      "execution_count": 37,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train,X_test,y_train,y_test = train_test_split(df.drop('species', axis=1), df['species'],test_size=0.2,random_state=42)\n"
-      ],
+      "execution_count": 38,
       "metadata": {
         "id": "EDV5rNTIHspf"
       },
-      "execution_count": 38,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train,X_test,y_train,y_test = train_test_split(df.drop('species', axis=1), df['species'],test_size=0.2,random_state=42)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "vPm9RjhVHzPX"
+      },
+      "outputs": [],
       "source": [
         "pipeline_lr = Pipeline([\n",
         "    ('scaler1', StandardScaler()),\n",
         "    ('pca1', PCA(n_components=3)),\n",
         "    ('lr_classifier',LogisticRegression(random_state=0))\n",
         "])\n"
-      ],
-      "metadata": {
-        "id": "vPm9RjhVHzPX"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "tl80UmA4H2HR"
+      },
+      "outputs": [],
       "source": [
         "pipeline_dt = Pipeline([\n",
         "    ('scaler2', StandardScaler()),\n",
         "    ('pca2', PCA(n_components=3)),\n",
         "    ('lr_classifier',DecisionTreeClassifier())\n",
         "])\n"
-      ],
-      "metadata": {
-        "id": "tl80UmA4H2HR"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "id": "djimQLJ_H4XA"
+      },
+      "outputs": [],
       "source": [
         "pipeline_rf = Pipeline([\n",
         "    ('scaler3', StandardScaler()),\n",
         "    ('pca3', PCA(n_components=3)),\n",
         "    ('lr_classifier',RandomForestClassifier())\n",
         "])\n"
-      ],
-      "metadata": {
-        "id": "djimQLJ_H4XA"
-      },
-      "execution_count": 41,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Let's make the list of pipelines\n",
-        "pipelines = [pipeline_lr,pipeline_dt,pipeline_rf]\n"
-      ],
+      "execution_count": 42,
       "metadata": {
         "id": "RhWjPneTH4Z4"
       },
-      "execution_count": 42,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Let's make the list of pipelines\n",
+        "pipelines = [pipeline_lr,pipeline_dt,pipeline_rf]\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "Fu8C5hyfH4cf"
+      },
+      "outputs": [],
       "source": [
         "best_accuracy = 0.0\n",
         "best_classifier = 0\n",
         "best_pipeline = \"\"\n"
-      ],
-      "metadata": {
-        "id": "Fu8C5hyfH4cf"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# dictionary of pipelines and classifier types for ease of reference\n",
-        "pipe_dict = {0:'Logistic Regression',1:'Decision Tree',2:'Random Forest'}\n"
-      ],
+      "execution_count": 44,
       "metadata": {
         "id": "yb9qs6VGH_ex"
       },
-      "execution_count": 44,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# dictionary of pipelines and classifier types for ease of reference\n",
+        "pipe_dict = {0:'Logistic Regression',1:'Decision Tree',2:'Random Forest'}\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "l2FOCXJ7IBXw"
+      },
+      "outputs": [],
       "source": [
         "# fit the pipelines\n",
         "for pipe in pipelines:\n",
         "    pipe.fit(X_train,y_train)\n"
-      ],
-      "metadata": {
-        "id": "l2FOCXJ7IBXw"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# model accuracy\n",
-        "for i,model in enumerate(pipelines):\n",
-        "    print('{} Test accuracy: {}'.format(pipe_dict[i],np.round(model.score(X_test,y_test)*100),1))\n",
-        ""
-      ],
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -486,21 +468,43 @@
         "id": "O_kT5eE4IDJx",
         "outputId": "6bd21317-d1e2-458e-a780-badbe4975ced"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Logistic Regression Test accuracy: 100.0\n",
             "Decision Tree Test accuracy: 97.0\n",
             "Random Forest Test accuracy: 100.0\n"
           ]
         }
+      ],
+      "source": [
+        "# model accuracy\n",
+        "for i,model in enumerate(pipelines):\n",
+        "    print('{} Test accuracy: {}'.format(pipe_dict[i],np.round(model.score(X_test,y_test)*100),1))\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K1Ziae5eMCdv",
+        "outputId": "a4f541db-52db-4fc1-d12f-c47a6566fe35"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model accuracy for Decision Tree is below the threshold (95) which is 90.0.\n",
+            "Model accuracy for Random Forest is below the threshold (95) which is 93.0.\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "\n",
@@ -520,27 +524,22 @@
         "    print(f\"Model accuracy for {pipe_dict[i]} is below the threshold ({threshold}) which is {np.round(model.score(X_test,y_test)*100)}.\")\n",
         "\n",
         "    exit(1)  # Exit with an error code\n",
-        "\n",
-        ""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K1Ziae5eMCdv",
-        "outputId": "a4f541db-52db-4fc1-d12f-c47a6566fe35"
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model accuracy for Decision Tree is below the threshold (95) which is 90.0.\n",
-            "Model accuracy for Random Forest is below the threshold (95) which is 93.0.\n"
-          ]
-        }
+        "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
